# 0.00.04 (57665) Oct 15, 2011
Added pie representation
# 0.00.03 (57658) Oct 14, 2011
Added percent representation
# 0.00.02 (57653) Oct 14, 2011
Added spinner control for fraction
Added toolbox for multiple representations
# 0.00.01 (57365) Oct 6, 2011